--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 									<h2><a href="#">Project 4<br />
 									Pipe Line 3D</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic19.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic19.PNG" alt="" /></a>
 									</p>Solidworks Project</p>
 									</p>Pipe Line</p>
 									</p>URL to document:</p>
