--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 									</p>Autocad Project</p>
 									</p>5000 TR district cooling plant.</p>
 									</p>URL to document:</p>
-									</p>file:///C:/Users/tyler/Downloads/jpg2pdf.pdf</p>
-									</p></p>
+									</p>file:///C:/Users/tyler/Downloads/internship/</p>
+									</p>My%20portfolio/autocad%20project.pdf</p>
 
 								</article>
 								<article>
@@ -172,20 +172,20 @@
 									</p>Sketchup Project</p>
 									</p>frmaed house</p>
 									</p>URL to Document:</p>
-									</p>file:///C:/Users/tyler/Downloads/Lab%20inspection%232.pdf</p>
-									</p></p>
+									</p>file:///C:/Users/tyler/Downloads/internship/</p>
+									</p>My%20portfolio/SKetchup.pdf</p>
 								</article>
 								<article>
 									<header>
 									<h2><a href="#">Project 4<br />
 									Pipe Line 3D</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic19.PNG" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic19.png" alt="" /></a>
 									</p>Solidworks Project</p>
 									</p>Pipe Line</p>
 									</p>URL to document:</p>
-									</p>file:///C:/Users/tyler/Downloads/Capture-converted.pdf</p>
-									</p></p>
+									</p>file:///C:/Users/tyler/Downloads/internship/</p>
+									</p>My%20portfolio/Solidworks.pdf</p>
 							</section>
 
 						<!-- Footer -->
@@ -234,3 +234,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
