--- a/My portfolio index.html
+++ b/My portfolio index.html
@@ -62,12 +62,12 @@
 										<h2><a href="#">Project 1<br />
 										3D View.</a></h2>
 									</header>
-									<a href="projects/autocad project.pdf" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
 									</p>Autocad Project</p>
 									</p>5000 TR district cooling plant.</p>
 									</p>URL to document:</p>
-									</p></p>
-								
+									</p>file:///C:/Users/tyler/Downloads/internship/</p>
+									</p>My%20portfolio/autocad%20project.pdf</p>
 
 								</article>
 								<article>
